--- a/boardproject/templates/new_topic.html
+++ b/boardproject/templates/new_topic.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load widget_tweaks %}
 {% block title %}Start a New Topic{% endblock %}
 
 {% block breadcrumb %}
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Post</button>
-    </form>
+<form method="post" novalidate>
+    {% csrf_token %}
+    {% include 'includes/form.html' %}
+    <button type="submit" class="btn btn-success">Post</button>
+</form>
 {% endblock %}
