--- a/boardproject/templates/topic_posts.html
+++ b/boardproject/templates/topic_posts.html
@@ -12,7 +12,7 @@
 
 {% block content %}
   <div class="mb-4">
-    <a href="{% url 'reply_topic' board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
+    <a href="{% url 'reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
   </div>
 
   {% for post in topic.posts.all %}
